test/error/ast/ProcHasNoReturn.mod
MODULE ProcHasNoReturn;
PROCEDURE P(): INTEGER;
BEGIN
END P;
END ProcHasNoReturn.
